--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ url: "http://danielnikolovski.com"
 twitter_username: danneniko
 github_username:  danneniko
 highlighter: rouge
+gems:
+  - jekyll-sitemap
 
 # Build settings
 markdown: kramdown
