--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 url: "http://danielnikolovski.com"
 twitter_username: danneniko
 github_username:  danneniko
-highlighter: rouge
+highlighter: pygments
 gems:
   - jekyll-sitemap
 
