--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Daniel Nikolovski | Webb / UX / SEO
+title: Daniel Nikolovski | Web / UX / SEO
 email: hello@danielnikolovski.com
 description: > # this means to ignore newlines until "baseurl:"
   Jag är en webbdesigner från Eslöv, med en brinnande passion för UX & SEO.
