--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Daniel Nikolovski | Web / UX / SEO
 email: hello@danielnikolovski.com
 description: > # this means to ignore newlines until "baseurl:"
-  Jag är en webbdesigner från Eslöv, med en brinnande passion för UX & SEO.
+  Jag är en front end designer från Eslöv, med en brinnande passion för UX & SEO.
 url: "http://danielnikolovski.com"
 twitter_username: danneniko
 github_username:  danneniko
