--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: Daniel Nikolovski | Web / UX / SEO
 email: hello@danielnikolovski.com
 description: > # this means to ignore newlines until "baseurl:"
-  Jag är en front end designer från Eslöv, med en brinnande passion för UX & SEO.
+  I am a Web designer from Sweden, with a burning passion for UX & SEO.
+// url: "http://danielnikolovski.com"
 url: "http://danielnikolovski.com"
 twitter_username: danneniko
 github_username:  danneniko
